...
                self?.addItems(viewController: SideMenuDetailViewController(model: self?.techModel ?? []), title: "TECHNOLOGY")
            case .gaming:
                self?.addItems(viewController: SideMenuDetailViewController(model: self?.gamingModel ?? []), title: "GAMING & GEEK")
            case .politics:
                self?.addItems(viewController: SideMenuDetailViewController(model: self?.politicsModel ?? []), title: "POLITICS")
            case .finance:
                self?.addItems(viewController: SideMenuDetailViewController(model: self?.financeModel ?? []), title: "BUSSINESS & FINANCE")
            case .fashion:
                self?.addItems(viewController: SideMenuDetailViewController(model: self?.fashionModel ?? []), title: "FASHION")
            case .science:
                self?.addItems(viewController: SideMenuDetailViewController(model: self?.scienceModel ?? []), title: "SCINCE")
            case .sports:
                self?.addItems(viewController: SideMenuDetailViewController(model: self?.sportsModel ?? []), title: "SPORTS")
            case .cinema:
                self?.addItems(viewController: SideMenuDetailViewController(model: self?.cinemaModel ?? []), title: "CINEMA")
            case .arts:
                self?.addItems(viewController: SideMenuDetailViewController(model: self?.artsModel ?? []), title: "ARTS & CULTURE")
...
