...
        button.layer.borderWidth = 1
        button.layer.borderColor = UIColor.label.cgColor
        return button
    }()
    
    lazy var segmentedControl: UISegmentedControl = {
        let items = ["Web","Reader"]
        let segmentedControl = UISegmentedControl(items: items)
        segmentedControl.translatesAutoresizingMaskIntoConstraints = false
        segmentedControl.selectedSegmentIndex = 1
        segmentedControl.layer.borderWidth = 1
        segmentedControl.layer.borderColor = UIColor.secondaryLabel.cgColor
        return segmentedControl
...
        view.backgroundColor = UIColor.setColor(lightColor: .white, darkColor: UIColor.bundleColor)
        view.addSubviews(imageView, titleLabel, sourceLabel, dateLabel, descriptionLabel, websideButton, segmentedControl)
        
        websideButton.addTarget(self, action: #selector(didTapWebsideButton), for: .touchUpInside)
        segmentedControl.addTarget(self, action: #selector(didSelectSegment), for: .valueChanged)
        
        view.accessibilityIdentifier = "DetailsViewController"
        
        navigationController?.navigationBar.tintColor = .label
        
        configureNavigationBar()
                
        configureConstraints()
...
